WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
53340
Cursor is not updated when an element’s position moves as part of layout
https://bugs.webkit.org/show_bug.cgi?id=53340
Summary
Cursor is not updated when an element’s position moves as part of layout
Simon Fraser (smfr)
Reported
2011-01-28 15:44:03 PST
From
https://bugs.webkit.org/show_bug.cgi?id=14344#c13
If an element’s position change affects the cursor because it moves under the cursor our moves out from under the cursor the cursor won’t change until the mouse moves.
Attachments
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-01-31 14:24:46 PST
Bug 53342
is about the same issue with hover state. Hyatt has suggested fixing both bugs at the same time.
Shane Stephens
Comment 2
2012-01-04 20:01:24 PST
***
Bug 70830
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3
2013-02-14 13:34:23 PST
***
Bug 109457
has been marked as a duplicate of this bug. ***
spamdaemon
Comment 4
2013-02-20 12:23:05 PST
I believe I've run into this issues when I set an element with a wait cursor to "display: none"? I've got some code that pulls a transparent blocking window over the page while an AJAX call is in progress. Once the ajax call returns, the blocking window is removed, but the cursor remains the same until I move the mouse. On Firefox, the cursor automatically changes back without having to move the mouse. Is anyone working this. This issue has been open for quite some time?
Alexsander Borges Damaceno
Comment 5
2025-02-19 12:42:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40887
EWS
Comment 6
2025-03-11 08:41:41 PDT
Committed
291948@main
(1368da9ddded): <
https://commits.webkit.org/291948@main
> Reviewed commits have been landed. Closing PR #40887 and removing active labels.
Radar WebKit Bug Importer
Comment 7
2025-03-11 08:42:15 PDT
<
rdar://problem/146760700
>
Ahmad Saleem
Comment 8
2025-04-01 13:24:12 PDT
Reopening since this got reverted -
https://github.com/WebKit/WebKit/commit/36b08c8584c750ecfb5de4bc8d3ad1a736d39a81
(
https://commits.webkit.org/293028@main
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug