Fix Cursor is not updated when an element position changes https://bugs.webkit.org/show_bug.cgi?id=53340

Reviewed by Alan Baradlay.

When an element is re-laid out, the cursor does not change its style until the mouse is moved because this triggers EventHandler::selectCursor.
This issue is resolved by calling a cursor update function to update the cursor type during document layout.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateLayout):
* LayoutTests/fast/events/mouse-cursor-change-02-expected.txt: Added.
* LayoutTests/fast/events/mouse-cursor-change-02.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/win/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/291948@main